[package]
name = "rocket_http"
version = "0.5.0-rc.2"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Types, traits, and parsers for HTTP requests, responses, and headers.
"""
documentation = "https://api.rocket.rs/v0.5-rc/rocket_http/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "http"]
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
edition = "2018"

[package.metadata]
# minimum supported rust version 1.51.0 because of cargo resolver in dependency crate time
msrv = "1.51.0"

[features]
default = []
tls = ["rustls-pemfile", "tokio-rustls"]
mtls = ["tls", "x509-parser"]
private-cookies = ["cookie/private", "cookie/key-expansion"]
serde = ["uncased/with-serde-alloc", "serde_"]
uuid = ["uuid_"]

[dependencies]
smallvec = "1.0"
percent-encoding = "2.1"
http = "0.2"
time = { version = "0.3", features = ["formatting", "macros"] }
indexmap = { version = "1.8", features = ["std"] }
rustls-pemfile = { version = "0.2", optional = true }
tokio-rustls = { version = "0.23", optional = true }
tokio = { version = "1.15", features = ["net", "sync", "time"] }
log = "0.4"
ref-cast = "1.0"
uncased = "0.9"
either = "1.6"
pear = "0.2"
pin-project-lite = "0.2"
memchr = "2.4"
stable-pattern = "0.1"
cookie = { version = "0.16", features = ["percent-encode", "secure"] }
state = "0.5"

[dependencies.x509-parser]
version = "0.12"
optional = true

[dependencies.hyper]
version = "0.14"
default-features = false
features = ["http1", "http2", "runtime", "server", "stream"]

[dependencies.serde_]
package = "serde"
version = "1.0"
optional = true
default-features = false
features = ["std"]

[dependencies.uuid_]
package = "uuid"
version = "0.8"
optional = true
default-features = false

[dev-dependencies]
rocket = { version = "0.5.0-rc.2", path = "../lib", features = ["mtls"] }
