[package]
name = "rocket_db_pools"
version = "0.1.0-rc.2"
authors = ["Sergio Benitez <sb@sergio.bz>", "Jeb Rosen <jeb@jebrosen.com>"]
description = "Rocket async database pooling support"
repository = "https://github.com/SergioBenitez/Rocket/contrib/db_pools"
readme = "../README.md"
keywords = ["rocket", "framework", "database", "pools"]
license = "MIT OR Apache-2.0"
edition = "2018"

[package.metadata]
# minimum supported rust version 1.53.0 because of
# error[E0391]: cycle detected when computing the supertraits of `database::Database`
# minimum supported rust version 1.54.0 because of
# dependency sqlx depends uses `std::io::ErrorKind::OutOfMemory`
msrv = "1.54.0"

[package.metadata.docs.rs]
all-features = true

[features]
# deadpool features
deadpool_postgres = ["deadpool-postgres", "deadpool"]
deadpool_redis = ["deadpool-redis", "deadpool"]
# sqlx features
sqlx_mysql = ["sqlx", "sqlx/mysql"]
sqlx_postgres = ["sqlx", "sqlx/postgres"]
sqlx_sqlite = ["sqlx", "sqlx/sqlite"]
sqlx_mssql = ["sqlx", "sqlx/mssql"]
sqlx_macros = ["sqlx/macros"]
# implicit features: mongodb

[dependencies.rocket]
path = "../../../core/lib"
version = "0.5.0-rc.2"
default-features = false

[dependencies.rocket_db_pools_codegen]
path = "../codegen"
version = "0.1.0-rc.2"

[dependencies.deadpool]
# to update deadpool to 0.9 would require MSRV 1.54.0
version = "0.9"
default-features = false
features = ["rt_tokio_1", "managed"]
optional = true

[dependencies.deadpool-postgres]
# to update to 0.10 would require MSRV 1.54.0
version = "0.10"
default-features = false
features = ["rt_tokio_1"]
optional = true

[dependencies.deadpool-redis]
# to update to 0.10 would require MSRV 1.54.0
version = "0.10"
default-features = false
features = ["rt_tokio_1"]
optional = true

[dependencies.mongodb]
version = "2.1"
default-features = false
features = ["tokio-runtime"]
optional = true

[dependencies.sqlx]
version = "0.5"
default-features = false
features = ["runtime-tokio-rustls"]
optional = true

[dev-dependencies.rocket]
path = "../../../core/lib"
default-features = false
features = ["json"]

[build-dependencies]
version_check = "0.9"
